--- a/frontend/src/pages/Menu.css
+++ b/frontend/src/pages/Menu.css
@@ -2,7 +2,7 @@
     width: 1764px;
     height: 117px;
     border-radius: 25px;
-    background: #DEC4C4;
+    background: #F2ECF8;
     margin-top: 47px;
     margin-left: 54px;
     
@@ -36,7 +36,7 @@
     width: 1764px;
     height: 100px;
     border-radius: 25px;
-    background: #DEC4C4;
+    background: #F2ECF8;
     margin-top: 124px;
     margin-left: 54px;
 
