--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -1,97 +1,68 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    appearance: 0;
-    border: 0;
-    text-decoration: none;
-    
-}
-.menu{
-    width: 1764px;
-    height: 117px;
-    border-radius: 25px;
-    background: #DEC4C4;
-    margin-top: 47px;
-    margin-left: 54px;
-    
-}
-
-.menu .menu-direita{
+.login {
+    background-color: #1f232f;
+    width: 100%;
+    min-height: 100vh;
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-evenly;
-    margin-left: 1200px;
-    
-    
+    align-items: center;
+    justify-content: center;
 }
 
-.menu .menu-direita .menu-texto{
-    margin-top: 40px;
+.login form {
+    background-color: #27254c;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.login{
-    display: block;
-    margin-top: -160px;
-    margin-left: 680px;
-    background: #DEC4C4;
-    width: 500px;
-    height: 350px;
-    flex-shrink: 0;
-    border-radius: 3.125rem;
-    
-    
-    
-}
-
-.login .login-cpf{
+.items {
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
-.login .items{
-    margin-left: 160px;
-    margin-top: 80px;
+.items label {
+    color: #f2f2f2;
+    font-size: 17px;
+    margin: 10px 0;
 }
 
-.rodape-footer{
-    width: 1801px;
-    height: 100px;
-    border-radius: 25px;
-    background: #DEC4C4;
-    margin-top: 124px;
-    margin-left: 25px;
-
+.items input {
+    background-color: #f2ecf8;
+    color: #f2f2f2;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    width: 220px;
+    margin-bottom: 10px;
 }
 
-.rodape-footer .footer-direita{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-evenly;
-    margin-left: 1200px;
-    
+.items input::placeholder {
+    color: #ccc;
 }
 
-.rodape-footer .footer-direita .footer-texto{
-    margin-top: 40px;
+.items input:focus {
+    outline: none;
+    box-shadow: 0 0 5px #45b0d2;
 }
 
-.fundo{
-  display: flex;  
-  background:#D9D9D9;
-  width:650px;
-  height: 208px;
-  margin-top: 66px;
-  margin-left: 1116px;
+.items button {
+    color: #f2f2f2;
+    background-color: transparent;
+    border: 1px solid #f2f2f2;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
-.fundo2{
-    background:#D9D9D9;
-    width:769px;
-    height: 308px;
-    margin-top: -100px;
-    
-  }
+.items button:hover {
+    background-color: #45b0d2;
+    border-color: #45b0d2;
+}
 
-
+.login p {
+    text-align: center;
+    color: red;
+    font-size: 15px;
+    margin-top: 10px;
+}
